--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "cd template-solar && npm install && npm run build",
-  "outputDirectory": "template-solar/.next",
-  "installCommand": "cd template-solar && npm install"
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/template-solar/$1" }
+  ]
 }
