--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@radix-ui/react-slot": "^1.1.1",
+    "@remixicon/react": "^4.6.0",
+    "clsx": "^2.1.1",
+    "geist": "^1.3.1",
+    "motion": "12.0.1",
+    "next": "15.1.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.4",
-    "typescript": "^5.3.3"
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "4.0.0-beta.3",
+    "@types/node": "^22.10.7",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "tailwindcss": "4.0.0-beta.3",
+    "typescript": "^5.7.3"
   }
 }
