Fix Vercel deployment by aligning vercel.json with dashboard settings and removing conflicting rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/template-solar/$1" }
-  ]
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs"
 }
